# PoL-backEnd

./: .gitignore  README.md  pom.xml  start.sh
boot-common/: pom.xml
boot-common/script/: buildContracts.sh
boot-common/src/main/DecentralizedApp/: CertQuery.sol  ExAddDemo.sol  GeoHashCon.sol  GridIndexCon.sol  LibEcUtils.sol  UserManager.sol  UserModule.sol  VerifyManager.sol  certTest.sol
boot-interface/: pom.xml
boot-user-service/: .gitignore  pom.xml
boot-user-service/script/: buildContracts.sh
boot-user-service/src/main/Native/: CMakeLists.txt  Makefile  NativeLib.cpp  NativeLib.h  genProofFun.cpp
boot-user-service/src/main/resources/: application.properties1  application.yml  log4j.properties  log4j2.xml  log4j2.yml  logback-spring.xml
boot-user-service/src/main/solidity/: BookManager.sol  CertQuery.sol  ExAddDemo.sol  JuzixTokenManager.sol  LibBook.sol
boot-user-service/src/main/solidity_old/: BookManager.sol  ExCall.sol  VerifyManager.sol  VerifyModule.sol
script/: buildContracts.sh
src/main/Native/: Makefile  NativeLib.cpp  NativeLib.h  genProofFun.cpp  genProofFun.h  jni_lib.hpp  uuid.hpp
src/main/java/com/dudu/: Application.java
src/main/resources/: application.properties
src/main/resources/templates/: index.html  login.html
src/main/solidity/: BookModule.sol  ExQueryDemo.sol  TokenModuleManager.sol  VerifyModule.sol
src/main/solidity/SystemContracts/nizk/: LibNizkParam.sol
src/main/solidity/SystemContracts/sysbase/: OwnerNamed.sol
src/main/solidity/SystemContracts/token/: ERC20.sol
(+132 files in other folders)
